<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.codehowpedia.androidintents.IntentsActivity" >

    
<Button
        android:id="@+id/btn_callhome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="callHome"
        android:text="@string/call_home" /> 
        <Button
        android:id="@+id/btn_callfriend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="callFriend"
        android:text="@string/call_friend" />  
       <Button
        android:id="@+id/btn_showdialer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showDialer"
        android:text="@string/make_phone_call" />  
        <Button
        android:id="@+id/btn_webbrowser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openBrowser"
        android:text="@string/open_browser" /> 
        <Button
        android:id="@+id/btn_showmap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showMap"
        android:text="@string/show_map" /> 
        <Button 
            android:id="@+id/btn_launchMyBrowser"
            android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:onClick="launchBrowser"
        android:text="@string/launch_my_browser"
            /> 
</LinearLayout>
